--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
   "singleQuote": false,
   "jsxSingleQuote": false,
-  "semi": false,
+  "semi": true,
   "tabWidth": 2,
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "always",
-  "trailingComma": "none"
+  "trailingComma": "all",
+  "endOfLine": "auto"
 }
