--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -61,5 +61,8 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "react-transition-group": "^4.4.1"
+  }
 }
