--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-dom": "*",
-    "react-router-dom": "*"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -58,6 +58,7 @@
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "typescript": "^3.7.5"
   },
@@ -65,8 +66,6 @@
     "dist"
   ],
   "dependencies": {
-    "@types/react-router": "^5.1.8",
-    "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1"
   }
 }
