Package Error Fix

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react": ">=16.13.1",
+    "react-dom": ">=16.13.1",
+    "react-router-dom": ">=5.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
