--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
     "@types/react-router-dom": "^5.1.5",
-    "@types/react-transition-group": "^4.4.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "babel-eslint": "^10.0.3",
@@ -66,6 +65,6 @@
     "dist"
   ],
   "dependencies": {
-    "react-transition-group": "^4.4.1"
+    "react-spring": "^8.0.27"
   }
 }
