--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "React UI component for creating complex routes and beautiful UI",
   "author": "dipeshrai123",
   "license": "MIT",
-  "repository": "dipeshrai123/react-uicomp",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dipeshrai123/react-uicomp"
+  },
+  "bugs": {
+    "url": "https://github.com/dipeshrai123/react-uicomp/issues"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
@@ -68,5 +74,8 @@
   "dependencies": {
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
