--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   ],
   "dependencies": {
     "react-spring": "^8.0.27",
-    "react-use-gesture": "^7.0.15"
+    "react-use-gesture": "^7.0.15",
+    "styled-components": "^5.1.1"
   }
 }
