--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-uicomp",
-  "version": "1.0.7",
-  "description": "React UI component for creating complex routes and beautiful UI",
+  "version": "1.0.8",
+  "description": "Utility library for creating complex routing with beautiful animated ui components.",
   "author": "dipeshrai123",
   "license": "MIT",
   "repository": {
