--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "dist"
   ],
   "dependencies": {
-    "react-spring": "9.0.0-rc.3",
+    "react-spring": "^9.0.0-rc.3",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.1.1"
   }
