:sparkles: Toast and useToast() hook added

--- a/example/package.json
+++ b/example/package.json
@@ -17,6 +17,7 @@
     "@types/node": "file:../node_modules/@types/node",
     "@types/react": "file:../node_modules/@types/react",
     "@types/react-dom": "file:../node_modules/@types/react-dom",
+    "lorem-ipsum": "^2.0.3",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
     "react-router-dom": "^5.2.0",
