--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-uicomp",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Animation and component library for react",
   "author": "dipeshrai123",
   "license": "MIT",
@@ -31,8 +31,7 @@
   },
   "peerDependencies": {
     "react": ">=16.13.1",
-    "react-dom": ">=16.13.1",
-    "react-router-dom": ">=5.2.0"
+    "react-dom": ">=16.13.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
