--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-uicomp",
-  "version": "2.0.4",
-  "description": "Animation and component library for react",
+  "version": "3.0.0",
+  "description": "UI component library for react",
   "author": "dipeshrai123",
   "license": "MIT",
   "repository": {
