--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
     "lorem-ipsum": "^2.0.3",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "file:../node_modules/react-scripts",
     "react-uicomp": "file:..",
