--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-ui-animate": "^1.4.2",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -61,6 +63,7 @@
     "@storybook/node-logger": "^6.4.18",
     "@storybook/preset-create-react-app": "^4.0.1",
     "@storybook/react": "^6.4.18",
+    "@types/styled-components": "^5.1.22",
     "webpack": "^5.68.0"
   }
 }
