--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-uicomp",
-  "version": "4.0.0",
+  "version": "4.0.0-alpha.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
